# CMakeList.txt : projet CMake pour CMakeProject1, incluez la source et définissez
# la logique spécifique au projet ici.
#

# Ajoutez une source à l'exécutable de ce projet.
add_executable (carrefour "carrefour.cpp" "carrefour.hpp" )

# TODO: Ajoutez des tests et installez des cibles si nécessaire.